stage 2.2 & overall evaluation conclusions

--- a/06_mirrorshades_studies_results/mirrorshades_studies_results.tex
+++ b/06_mirrorshades_studies_results/mirrorshades_studies_results.tex
@@ -478,7 +478,7 @@ Further comparing head movements between the VR section of the traditional scena
 
 In general, participant reactions to the Mirrorshades platform met the hypotheses. From the questionnaire data \& interview transcripts, participants reported that they found the PR scenario to be both more enjoyable \& more rewarding than the traditional scenario, despite the decreased usability \& comfort effected by the requirement to don \& carry a satchel of hardware \& hold devices in both hands. The PR scenario was reported as allowing easier comparison \& contrast between RW \& VR environments, leading to recognising more differences between the two environments \& a greater change in \& better understanding of the chapel than with the traditional scenario. The visual acuity afforded by the cameras \& both the accuracy \& lag of the IPS surfaced as the major detractors to the experience of the PR scenario.
 
-From the log data, participants displayed restricted head movement throughout the PR scenario, looking to their sides \& above \& beneath themselves less when experiencing the VR chapel in the PR scenario than when experiencing the VR chapel in the traditional scenario. While this restriction does not appear to have been so great that it reduced the utility \& enjoyability of the PR scenario to beneath that of the traditional scenario, it has been observed by other researchers~\cite{Slater1998} that there is a significant positive association between reported sense of presence in a VR environment \& the amount of body movement, particularly head yaw, displayed by a participant, so reducing the negative impact that a PR system has upon a user's willingness to freely look around them will likely result in beneficial returns.
+From the log data, participants displayed restricted head movement throughout the PR scenario, looking to their sides \& above \& beneath themselves less when experiencing the VR chapel in the PR scenario than when experiencing the VR chapel in the traditional scenario. While this restriction does not appear to have been so great that it reduced the utility \& enjoyability of the PR scenario to beneath that of the traditional scenario, it has been observed by other researchers~\cite{Slater1998} that there is a significant positive association between reported sense of presence in a VR environment \& the amount of body movement, particularly head yaw, displayed by a participant, so reducing the negative impact that a PR system has upon a user's willingness to freely look around them will likely result in beneficial returns, especially when considering that restricted head movement may lead to overlooking interesting aspects of the environments.
 
 Through this first stage of evaluation the Mirrorshades platform has shown itself to be a rewarding new modality for experiencing VR content in a cultural heritage context, improving upon traditional techniques employed for the presentation of such content by allowing immediate comparison \& contrast between corresponding vantage points in both the RW \& VR environments.
 
@@ -1091,6 +1091,8 @@ The same relationships with head movement as seen in stage 1 returned for stage 
 
 IPQ results met hypotheses, with the traditional scenario scoring highly in both SP \& INV while scoring lowly in REAL (explained by the low visual quality of the VR model) \& the PR scenarios only marginally reducing SP \& REAL while more substantially reducing INV. Of particular interest is that scenario 1-4 displayed a substantial gap between SP3 \& INV2, whereas with scenario 1-3 these values were reduced more evenly from their traditional scenario baseline. These IPQ results indicate that the PR scenarios undertaken by stage 2.1 participants succeed in allowing participants to experience the RW environment in tandem with the VR environment, without having a substantial negative effect upon their sense of presence in the VR environment or upon the perceived realism of the VR environment.
 
+This stage of the evaluation has provided insight into some best practices for implementing future PR experiences. The ability to manually control the balance of RW/VR visuals has emerged as preferable to moree basic transitions that simply alternate between the extremes of 100\% RW \& 100\% VR, while adding uncontrolled VR visuals to the default view led to a negative effect upon enjoyment \& comfort but a positive effect upon observation \& understanding of the relationship between the two constituent environments.
+
 %=========================================================================================================
 
 \clearpage
@@ -1099,22 +1101,17 @@ IPQ results met hypotheses, with the traditional scenario scoring highly in both
 
 \section{Stage 2.2}
 
-One of the threads that emerged from the stage 2.1 investigation was that while transition 4 was unanimously negatively received because of the worse breaks in presence that it caused by `surprising' the participants, the VR visual stimuli that it presented without consciously triggering a transition led to several participants indicating that it resulted in them better understanding the relationship between the two environments \& noticing more differences between them. Stage 2.2 thus investigated how untriggered VR stimuli could be introduced into a PR experience but in a less obtrusive manner than transition 4, namely by changing the default view to less than 100\% RW.
+One of the threads that emerged from the stage 2.1 investigation was that while transition 4 was unanimously negatively received because of the worse breaks in presence that it caused by `surprising' the participants, the VR visual stimuli that it presented without participants having to consciously trigger a transition led to several participants indicating that it resulted in them better understanding the relationship between the two environments \& noticing more differences between them. Stage 2.2 thus investigated how untriggered VR stimuli could be introduced into a PR experience but in a less obtrusive manner than transition 4, namely by changing the default view to less than 100\% RW.
 
-Stage 2.2 followed the same pattern as stage 2.1, with participants first engaging in a traditional scenario in which they were seated \& used the DK1 \& Xbox controller to explore the VR chapel \& subsequently completed two PR scenarios in which they walked through the chapels, thus completing three scenarios;
+Stage 2.2 followed the same pattern as stage 2.1, with participants first engaging in a traditional scenario in which they were seated \& used the DK1 \& Xbox controller to explore the VR chapel \& subsequently completed two PR scenarios in which they walked through the chapels, thus completing three scenarios in total;
 
 \begin{enumerate}
-	\item \textbf{Traditional scenario} - 
-	\item \textbf{PR scenario with 75\% RW/25\% VR default view} - 
-	\item \textbf{PR scenario with 50\% RW/50\% VR default view} -
+	\item \textbf{Traditional scenario} - Participants explore the VR chapel from a stationary position, as VR has traditionally been employed at cultural heritage sites via CAVE installations \& by the OVW group with Oculus HMDs, using the Xbox controller to move around the VR environment observed via the DK1, with the DK1 obscuring theier view of the RW chapel around them.
+	\item \textbf{PR scenario with 75\% RW/25\% VR default view} - (Referred to as the `75/25 scenario') Participants experience the RW \& VR chapels in tandem using the Mirrorshades platform. They wear the DK1, holding the Xbox controller in their right hand \& the smartphone in their left, with the laptop \& control box bundle in a satchel worn over one shoulder. The default view on the DK1 screen is 75\% RW/25\% VR, achieved by setting the base opacity of the objects upon which the camera feeds are rendered to 75\%. The participants are furnished with a single transition style, the transition with linear interpolation (transition 2 from the stage 2.1 evaluation).
+	\item \textbf{PR scenario with 50\% RW/50\% VR default view} - (Referred to as the `50/50 scenario') Participants undertake the same scenario as the 75/25 scenario, except the default view on the DK1 screen is 50\% RW/50\% VR, achieved by setting the base opacity of the objects upon which the camera feeds are rendered to 50\%. Participants are again fashioned with the linear interpolated transition as the only transition style.
 \end{enumerate}
 
-
-
-
-In the first of these PR scenarios the default view was set to 75\% RW/25\% VR (referred to as the `75/25 scenario') \& in the second PR scenario the default view was set to 50\%RW/50\%VR (referred to as the `50/50 scenario'). Participants were only fashioned with a single transition technique, transition 2. As the controlled variable between the two PR scenarios was opacity based, it seemed prudent not to fashion the participants with the ability to consciously affect opacity.
-
-Once again, participants were simply instructed to make their way from the starting position down to the alter end of the chapel, with no hard restrictions upon their path or when/where they were to stop \& pay attention to particular aspects of their surroundings.
+As the controlled variable between the two PR scenarios was opacity based, it seemed prudent not to fashion the participants with the ability to consciously affect opacity by giving them access to the analogue selectable opacity feature (transition 3 from the stage 2.1 evaluation). In the same manner as during stage 2.1, participants were simply instructed to make their way from the starting position down to the altar end of the chapel, with no hard restrictions upon their path or when/where they were to stop \& pay attention to particular aspects of their surroundings.
 
 %=========================================================================================================
 
@@ -1158,7 +1155,7 @@ When considering the responses to the Likert-type questionnaires (see figure \re
 
 Once again, the interview recordings that were transcribed after the chapel sessions gave valuable insight into the experience of the two PR scenarios in stage 2.2.
 
-Two participants said that they preferred the 75/25 scenario, while the other two participants preferred the 50/50 scenario. Of those that preferred the 75/25 scenario, one explained that s/he felt more in control of whether s/he was seeing real or virtual while the other found the more obvious sudden VR movements visible during the 50/50 scenario to be uncomfortable. Of those that preferred the 50/50 scenario one reported that of the 75/25 scenario that it was \textit{``confusing to make sense of what I was seeing''} while the other found that switching to fully VR was less of a jump coming from 50/50 \& was thus \textit{``more comfortable spending more time in the virtual''}.
+Two participants said that they preferred the 75/25 scenario, while the other two participants preferred the 50/50 scenario. Of those that preferred the 75/25 scenario, one explained that s/he felt more in control of whether s/he was seeing real or virtual while the other found the more obvious sudden VR movements visible during the 50/50 scenario to be uncomfortable. Of those that preferred the 50/50 scenario one reported that of the 75/25 scenario that it was \textit{``confusing to make sense of what I was seeing''} while the other found that switching to fully VR was less of a jump coming from 50/50, alluding to a less severe break in presence, thus was \textit{``more comfortable spending more time in the virtual''}.
 
 All of the participants however reported that the 50/50 scenario was more engaging. Interestingly, one of the participants who reported preferring the 75/25 scenario largely because of inaccuracy of the IPS during the 50/50 scenario to cause disorientation, commented that this inaccuracy led to greater engagement because it would show him/her other parts of the VR chapel than were equivalent to his/her immediate surroundings. Two participants further reported that the 50/50 scenario made differences between RW \& VR more obvious, with one reporting not much discernible difference. One participant specially mentioned how the 50/50 scenario made it more \textit{``perceptible exactly where things were''} which led to seeing him/herself \textit{``walking through''} (virtual) things whereas with the 75/25 scenario s/he would have to \textit{``switch back \& forth \& then realise''}. One participant directly answered that they thought they used the button to manually transition more in the 50/50 scenario because it was less jarring than in the 75/25 scenario.
 
@@ -1410,10 +1407,33 @@ traditional & 1.75 & 2.217 & 5 & 0.816 \\
 
 \subsection{Conclusions}
 
-It is worth considering that while a default view that presents \textless 100\% RW does seem to increase participant exposure to angles of the RW environment other than those required to perceive when walking, by allowing users to look around at the VR environment when stationary without needing to perform a transition to 100\% VR \& thus losing all visual stimuli from the RW environment, that for a participant who does feel less comfortable walking with the apparatus that not having a 100\% RW view available will likely have a detrimental effect to the experience as a whole. Furthermore, if a user wishes to inspect something in the RW environment in particular detail, not being able to activate a 100\% RW view may well reduce their ability to discern detail in this object, again hampering the overall PR experience. Although this stage 2.2 evaluation prevented users from occupying a position at the RW extreme of the locus of attention axis by always showing them at least 25\% or 50\% of the VR environment, this is not strictly a sensible approach. A sensible approach for real world application would perhaps be to allow toggling between a 100\% RW view \& one a (for example) 50/50 view, such that users could reap the benefits of the combined view but while maintaining the ability to transition back to a 100\% view \& the RW extreme of the focus of attention axis when the situation demanding it.
+This stage of the evaluation investigated the effects of changing the default view of a PR scenario to one that always includes some aspect of the VR environment, such that the user is at all times receiving some degree of VR stimuli even when they do not consciously trigger a transition into a non-default view \& without relying upon a severe break in presence causing instantaneous transition to \& from a 100\% VR view as was the case with transition 4 in the second of the stage 2.1 PR scenarios.
+
+Comparing the PR scenarios from this stage of the evaluation to the second PR scenario from the stage 2.1 evaluation in which transition 4 was used, the IPQ results indicate that the 75/25 scenario reduced SP \& REAL to similar levels however the 50/50 scenario resulted in an almost imperceptible decrease in REAL \& a noticeable \textit{increase} in SP, while the results for the traditional scenario closely matched those from the stage 2.1 evaluation.
+
+Despite these results \& the fact that the 50/50 scenario was reported as allowing easier comparison between the two environments, it was considered less rewarding \& was less preferred overall compared to the 75/25 scenario. In some ways this mimics the relationship between the first stage 2.1 PR scenario \& the second stage 2.1 PR scenario, where although the second led to furthered understanding of the two environments it did so at a cost of comfort \& enjoyability.
+
+Fewer transitions overall during the 50/50 scenario with participants spending more time in total \& per transition viewing the VR environment in scenario 75/25 supports the notion that with an increased amount of VR visible in the default position that participants did not perceive the necessity to perform a conscious transition to see VR content that interested them. Considering the relationship observed in the stage 2.1 PR scenarios of maximum variance of head movement restricted to periods in which the participants were viewing 100\% VR, reducing the participants' reliance upon performing these transitions stands to benefit participants' observation of RW components that they would otherwise have missed by looking only at the VR environment when looking in certain directions.
+
+However it is worth considering that while a default view that presents \textless 100\% RW does seem to increase participant exposure to angles of the RW environment other than those required to perceive when walking, by allowing users to look around at the VR environment when stationary without needing to perform a transition to 100\% VR \& thus losing all visual stimuli from the RW environment, that for a participant who feels less comfortable walking with the apparatus that not having a 100\% RW view available will likely have a detrimental effect to the experience as a whole. Furthermore, if a user wishes to inspect something in the RW environment in particular detail, not being able to activate a 100\% RW view may well reduce their ability to discern detail in this object, again hampering the overall PR experience. Although this stage 2.2 evaluation prevented users from occupying a position at the RW extreme of the locus of attention axis by always showing them at least 25\% or 50\% of the VR environment, this is not strictly a sensible approach. A sensible approach for real world application would perhaps be to allow toggling between a 100\% RW view \& one a (for example) 50/50 view, such that users could reap the benefits of the combined view but while maintaining the ability to transition back to a 100\% view \& the RW extreme of the focus of attention axis when the situation demanding it.
 
 %=========================================================================================================
 
 \section{Conclusions to Mirrorshades Evaluation Chapter}
+
+stage 1 - PR good
+
+stage 2.1 - control \& fading good, flashes bad but subconscious VR leads to more observation/understanding
+
+stage 2.2 - the more subconscious VR the more observation/understanding, but too much makes the experience as a whole less enjoyable
+
+
+informing PR in general
+
+A 100\% RW view \& a 100\% VR view should be provided
+A method of transitioning between the two at a user-controlled speed, with the ability to pause at any inbetween balance should be provided
+
+A default view with \textless than 100\% RW should be provided, but should be toggleable \& not enforced
+This \textless 100\% should not be too much \textless 100\% because going too far hampers the overall experience
 
 %=========================================================================================================
