stage 2.2 & overall evaluation conclusions

--- a/06_mirrorshades_studies_results/mirrorshades_studies_results.tex
+++ b/06_mirrorshades_studies_results/mirrorshades_studies_results.tex
@@ -474,7 +474,7 @@ Further comparing head movements between the VR section of the traditional scena
 
 %=========================================================================================================
 
-\subsection{Stage 1 Conclusions}
+\subsection{Summary}
 
 In general, participant reactions to the Mirrorshades platform met the hypotheses. From the questionnaire data \& interview transcripts, participants reported that they found the PR scenario to be both more enjoyable \& more rewarding than the traditional scenario, despite the decreased usability \& comfort effected by the requirement to don \& carry a satchel of hardware \& hold devices in both hands. The PR scenario was reported as allowing easier comparison \& contrast between RW \& VR environments, leading to recognising more differences between the two environments \& a greater change in \& better understanding of the chapel than with the traditional scenario. The visual acuity afforded by the cameras \& both the accuracy \& lag of the IPS surfaced as the major detractors to the experience of the PR scenario.
 
@@ -540,6 +540,8 @@ However, in a PR scenario that features high spatial equivalence between its con
 % ***but why didn't we add physiological measures as well?
 
 %=========================================================================================================
+
+\clearpage
 
 \section{Stage 2.1}
 
@@ -1081,11 +1083,13 @@ traditional & 4.5 & 1.472 & 4 & 1.673 \\
 
 %=========================================================================================================
 
-\subsection{Conclusions}
+\subsection{Summary}
 
 Participants overwhelmingly preferred transition 3 compared to the others, which was somewhat surprising as initial experiments with the Mirrorshades platform with members of the OVW research group strongly indicated preference toward transition 2. With the larger number of participants in this stage of evaluation compared to the unscientific tests within the OVW group, this preference toward transition 3 should be considered legitimate even though unexpected. Reasoning for preference toward transition 3 included being able to see both environments at once \& a heightened sense of control.
 
 Transition 4 was unanimously negatively received in terms of overall comfort \& enjoyment of the scenarios, however participants did comment on heightened awareness \& understanding between the two environments when transition 4 was present. Comments from participants concerning transition 4 such as that each time it occurred they would need to \textit{``stop \& work it out again''} directly supports the notion that transition 4 results in a larger break in presence, in terms of movement on the focus of attention axis from presence toward absence, than the the other transition styles, with `working it out' alluding to the notion of conceptual/abstract reasoning that sits opposite perceptual/concrete processing at the two ends of the balance of focus of attention.
+
+One relationship that did not arise as expected was a preference toward different transition styles in different situations, such as using transition 1 when performing a quick check on the VR environment \& transition 3 when performing a more in-depth comparison. Instead it seems that most participants `experimented' with the transition styles available to them \& settled upon a favourite, then using that one style throughout the rest of the scenario. Either the difference in utility between the different transition styles was not great enough to prompt participants to consider using different styles in different situations, or comfort trumped utility \& participants continued to use the transition style they found most comfortable even if they thought that another might have served them better for a specific set of circumstances.
 
 The same relationships with head movement as seen in stage 1 returned for stage 2.1, with substantially more variance in yaw than pitch across all scenarios, more variance in head movement when perceiving VR than RW during the PR scenarios \& more variance in head movement while standing stationary than when walking during the PR scenarios.
 
@@ -1405,7 +1409,7 @@ traditional & 1.75 & 2.217 & 5 & 0.816 \\
 
 %=========================================================================================================
 
-\subsection{Conclusions}
+\subsection{Summary}
 
 This stage of the evaluation investigated the effects of changing the default view of a PR scenario to one that always includes some aspect of the VR environment, such that the user is at all times receiving some degree of VR stimuli even when they do not consciously trigger a transition into a non-default view \& without relying upon a severe break in presence causing instantaneous transition to \& from a 100\% VR view as was the case with transition 4 in the second of the stage 2.1 PR scenarios.
 
@@ -1419,21 +1423,14 @@ However it is worth considering that while a default view that presents \textles
 
 %=========================================================================================================
 
-\section{Conclusions to Mirrorshades Evaluation Chapter}
+\section{Conclusions}
 
-stage 1 - PR good
+These evaluations have experimentally shown the value of the Mirrorshades platform (\& PR in general) as a new modality for on-site comparison of real \& virtual environments within the context of a cultural heritage site, as well as revealing a number of best practices for future implementations of PR systems.
 
-stage 2.1 - control \& fading good, flashes bad but subconscious VR leads to more observation/understanding
+The first stage of evaluation directly compared a traditional scenario in which VR has typically been used at cultural heritage sites with the new style of interaction afforded by the Mirrorshades platform, addressing both temporal \& spatial separation between experience of the real \& virtual environments. Despite the cumbersome nature of the system, participants found the PR experience to be both more enjoyable \& more rewarding than the traditional experience, allowing them to more easily perform comparisons between the constituent environments \& leading them to a better understanding of the site's history.
 
-stage 2.2 - the more subconscious VR the more observation/understanding, but too much makes the experience as a whole less enjoyable
+With the worth of the platform established by the stage 1 evaluation, the second stage of evaluation explored different implementation details of the platform to inform future implementation of similar systems such that the benefits of the concept can be best exploited. Stage 2.1 assessed participant responses to several different styles of performing transitions between the constituent RW \& VR environments, with a transition which furnished participants with complete control over the percentage of the visual stimuli of each environment that were presented to them emerging the clear favourite. The introduction of automatic transitions from RW to VR was met negatively when assessed in terms of enjoyment \& preference, but positively when assessed in terms of awareness \& understanding of the relationships between the two environments.
 
-
-informing PR in general
-
-A 100\% RW view \& a 100\% VR view should be provided
-A method of transitioning between the two at a user-controlled speed, with the ability to pause at any inbetween balance should be provided
-
-A default view with \textless than 100\% RW should be provided, but should be toggleable \& not enforced
-This \textless 100\% should not be too much \textless 100\% because going too far hampers the overall experience
+Stage 2.2 further investigated the concept of presentation of VR visual stimuli to the user without their conscious invocation of a transition, the intention being to raise awareness \& understanding between the environments without introducing the negativity of the automatic transition, by replacing the 100\% RW default view of earlier stages with ones that presented a percentage of each environment at all times. The more extreme case of a 50/50 split led to the greater increase in spatial presence within the VR environment \& a barely perceptible decrease in experienced realism of the RW environment, however the 75/25 split that led to a less remarkable change was preferred by the participants.
 
 %=========================================================================================================
