--- a/07_conclusions/conclusions.tex
+++ b/07_conclusions/conclusions.tex
@@ -5,3 +5,22 @@
 \end{itemize}
 
 \hrule
+
+
+
+
+
+\section{PR Best Practices}
+
+\begin{itemize}
+	\item A 100\% RW view \& a 100\% VR view should be provided
+	\item A method of transitioning between the two views at a user-controlled speed, with the ability to pause at any inbetween balance, should be provided
+	\item A default view with \textless than 100\% RW should be provided, but should be toggleable \& not enforced
+	\item This \textless 100\% should not be too much \textless 100\% because going too far hampers the overall experience
+\end{itemize}
+
+
+
+
+
+
