jotting down intro ideas

--- a/01_introduction/introduction.tex
+++ b/01_introduction/introduction.tex
@@ -16,3 +16,27 @@
 %\hrule
 
 Talk about history of alternate realities, talk about the disappointment of VR in the 90's \& it's resurgence now thank to Oculus, etc.
+
+
+
+
+
+
+Alternate realities have been a mainstay of both popular science fiction \& of serious academic research for many decades, with the concept of the existence of another `there' \& how we could visit it or bring it into our `here'
+keeping fascinated authors \& scientists alike.
+
+From the `Sensorama' simulator of the 1960s to the Oculus Rift of the early 2010s
+
+From William Gibson's `The Gernsback Continuum' \& beyond through contemporary cyberpunk literature
+
+the `gargoyles' of MIT
+
+
+The 90's saw a surge of hype over the Virtual Reality concept, however with hardware \& software not ready to meet the expectations sown among consumers by the media the bubble burst.
+
+The advent of the smartphone lead to the dissemination of any number of Augmented Reality, an attempt to merge to some extent our real world with aspects of the virtual.
+
+
+And the Media Lab invented what they would call Cross Reality that linked a real world location with a virtual other via sensors \& actuators, such that an inhabitant of one could glimpse a tantalizing insight into the goings on of the `other' although they could not see into it.
+
+This thesis explores an alternate reality that as yet has received little attention or even a name. Parallel Reality as it came to be called builds upon the concept of Cross Reality \& its two distinct environments each `complete unto itself'. But instead of the shadow of one environment only laying upon the other by manner of sensors \& actuators, new VR technology combined with indoor positioning systems allow a user to switch between environments - to at one moment view their RW surroundings \& at the next to view the equivalent vantage in a parallel virtual environment
