--- a/01_introduction/introduction.tex
+++ b/01_introduction/introduction.tex
@@ -22,8 +22,8 @@ Talk about history of alternate realities, talk about the disappointment of VR i
 
 
 
-Alternate realities have been a mainstay of both popular science fiction \& of serious academic research for many decades, with the concept of the existence of another `there' \& how we could visit it or bring it into our `here'
-keeping fascinated authors \& scientists alike.
+Alternate realities have been a mainstay of both popular science fiction \& of serious academic research, the concept of the existence of another `there' \& how we could visit it or bring it into our `here'
+keeping authors \& scientists alike fascinated for many decades.
 
 From the `Sensorama' simulator of the 1960s to the Oculus Rift of the early 2010s
 
