--- a/06_mirrorshades_studies_results/mirrorshades_studies_results.tex
+++ b/06_mirrorshades_studies_results/mirrorshades_studies_results.tex
@@ -1,3 +1,13 @@
+\begin{quote}
+	\textit{``Amplified, shielded, channeled, prosthetized, simulated, stimulated, irritated - our sensorium is more mediated today than ever before, Yet it bothers us less. The cyborg model of the 1980s and the virtual dreams of the 1990s have evolved into a twenty-first-century `comfort zone', in which the prosthetic and supplemental are habitual.''}
+\end{quote}
+\hfill \textit{The Mediated Sensorium, Caroline A. Jones}
+\\
+\\
+
+%=========================================================================================================
+
+
 The design \& development of the Mirrorshades platform was driven both to investigate mobile PR systems as a concept in general \& to assess their suitability when applied to a particular case study as a new modality for interacting with virtual content within the context of a cultural heritage site. For this purpose evaluation of the platform firstly addressed its reception compared to a `traditional' virtual heritage experience \& secondly studied reactions \& preferences toward different PR implementations with regards to the default view \& transition styles provided.
 
 %=========================================================================================================
