--- a/07_conclusions/conclusions.tex
+++ b/07_conclusions/conclusions.tex
@@ -1,12 +1,11 @@
-\begin{itemize}
-	\item \textbf{Content -} More in-depth explanation of contributions, identify future work (but don't dwindle).
-	\item \textbf{What has been done -} Nothing.
-	\item \textbf{What is left to do/how long should it take -} Should probably be written towards the end, after all design \& implementation, evaluation \& discussion has been completed. Should be a short section, 10 pages is probably far too long, shouldn't take long to write if the evaluation \& discussion section is done properly.
-\end{itemize}
+\begin{quote}
+	\textit{``It also reflects the transformation of our internal world, which, as a result of our increasing access to diverse virtual information, continues to expand in a way that seems disconnected from our relationship to the external world.''}
+\end{quote}
+\hfill \textit{Yuko Hasegawa on the work of Mathieu Briand, Sensorium}
+\\
+\\
 
-\hrule
-
-
+%=========================================================================================================
 
 
 
